# volcano-hybrid-ha

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  __init__.py  button.py  climate.py  config_flow.py  const.py  diagnostics.py  fan.py  manifest.json  number.py  pyproject.toml  requirements_dev.txt  sensor.py  services.yaml  strings.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
tests/: __init__.py  conftest.py
translations/: en.json
volcano/: __init__.py  api.py  exceptions.py  statistics.py
wiki/: Automation-Examples.md  Building-Blocks.md  Entities-Overview.md  Event-System.md  FAQ.md  Home.md  Installation-Guide.md  Troubleshooting.md
www/: test-positioning.html  volcano-card-editor.js  volcano-card.js
